--- a/DockerSampleApp/Views/Home/About.cshtml
+++ b/DockerSampleApp/Views/Home/About.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     ViewData["Title"] = "About";
 }
+<h2>Welcome to my first sample page </h2>
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
